--- a/src/static/scss/components/_document-body.scss
+++ b/src/static/scss/components/_document-body.scss
@@ -3,18 +3,34 @@
 
   display: flex;
 
+  padding-top: 2rem;
   padding-right: 4.6rem;
+  padding-bottom: 5rem;
   padding-left: 4.6rem;
 
   @include bp-smallonly {
-    padding-top: 2.5rem;
-    padding-right: 1rem;
-    padding-left: 1rem;
+    padding: 4rem 1rem;
   }
   @include bp-mediumonly {
-    padding-top: 3.5rem;
-    padding-right: 1.6rem;
-    padding-left: 1.6rem;
+    padding: 4rem 1.6rem;
+  }
+
+  &::before {
+    position: fixed;
+    z-index: 1;
+    top: calc(100% - 5rem);
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    content: '';
+    pointer-events: none;
+
+    background: linear-gradient(transparent, #FFF);
+
+    @include bp-smallonly {
+      top: calc(100% - 4rem);
+    }
   }
 
   &.-voidselection {
