--- a/src/templates/pages/dashboard.html
+++ b/src/templates/pages/dashboard.html
@@ -15,7 +15,8 @@
   <input class="search js-search" type="text" placeholder="Buscar">
   <div class="list">
     <a href="/p/2-lei-de-acesso-a-informacao/" class="simple-card -new">
-      
+      <span class="icon" aria-label="Adicionar projeto"></span>
+
     </a>
     <a href="/p/2-lei-de-acesso-a-informacao/" class="simple-card">
       <div class="header">
