--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -28,7 +28,7 @@ body.-white .nav-bar {
   padding-right: 1.6rem;
   padding-left: 1.6rem;
 
-  transition: all .25s ease;
+  transition: all .25s $swift-out;
 
   background-color: $color-whitesmoke;
 
