--- a/src/static/scss/components/_text-highlight.scss
+++ b/src/static/scss/components/_text-highlight.scss
@@ -4,7 +4,10 @@
   padding: .2em 0;
 
   color: $color-deep-gray;
-  background-color: rgba($color-highlight, .5);
+  background-image: linear-gradient(transparent 0%, $color-highlight-on-white 0, $color-highlight-on-white 100%, transparent 0);
+  background-repeat: no-repeat;
+  background-position-x: left;
+  background-size: 100% 100%;
 
   &.-active {
     cursor: default;
