Create new pages

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -49,6 +49,8 @@
 @import 'components/alert-message';
 @import 'components/start-header';
 @import 'components/howto-button';
+@import 'components/document-editor';
+@import 'components/side-bar';
 
 // Vendor
 @import 'vendor/tooltip';
