--- a/src/templates/pages/dashboard.html
+++ b/src/templates/pages/dashboard.html
@@ -14,65 +14,34 @@
   </div>
   <input class="search js-search" type="text" placeholder="Buscar">
   <div class="list">
-    <a href="/p/2-lei-de-acesso-a-informacao/" class="simple-card -new">
+    <a href="{% url 'new_document' %}" class="simple-card -new">
       <span class="icon" aria-label="Adicionar projeto"></span>
 
     </a>
-    <a href="/p/2-lei-de-acesso-a-informacao/" class="simple-card">
-      <div class="header">
-
-        <span class="date">Aberto até 15/01/2020</span>
-        <span class="status"><img src="/static/img/padlock.svg">Privado</span>
-
-      </div>
-      <h3 class="js-title">Lei de Acesso à Informação</h3>
-      <p class="js-description">Dispõe sobre o uso inadequado da imagem da mulher em campanhas publicitárias destinadas à venda de produtos de consumo.</p>
+    {% for document in object_list %}
+      <a href="{% url 'edit_document' pk=document.id %}" class="simple-card">
+      <h3 class="js-title">{{ document.title }}</h3>
+      <p class="js-description">{{ document.description }}</p>
       <div class="info">
         <div class="themes">
-
+          {% for theme in document.themes.all %}
           <div class="theme">
-
-            <img src="/media/icons/education_uYe41SE.png" alt="educacao">
-
-            <span>Educação</span>
+            {% if theme.icon %}
+            <img src="{{ theme.icon.url }}" alt="{{ theme.slug }}">
+            {% endif %}
+            <span>{{ theme.name }}</span>
           </div>
-
+          {% endfor %}
         </div>
         <div class="suggestions">
           <div class="suggestion">
-            <span class="value">0</span>
-            <span>Sugestões</span>
+            <span class="value">{{document.invited_groups.all.count}}</span>
+            <span>Grupos</span>
           </div>
         </div>
       </div>
     </a>
-    <a href="/p/6-lei-de-acesso-a-informacao/" class="simple-card">
-      <div class="header">
-
-        <span class="date">Aberto até 28/02/2019</span>
-
-      </div>
-      <h3 class="js-title">Lei de Acesso à Informação</h3>
-      <p class="js-description">Dispõe sobre o uso inadequado da imagem da mulher em campanhas publicitárias destinadas à venda de produtos de consumo.</p>
-      <div class="info">
-        <div class="themes">
-
-          <div class="theme">
-
-            <img src="/media/icons/education_uYe41SE.png" alt="educacao">
-
-            <span>Educação</span>
-          </div>
-
-        </div>
-        <div class="suggestions">
-          <div class="suggestion">
-            <span class="value">5</span>
-            <span>Sugestões</span>
-          </div>
-        </div>
-      </div>
-    </a>
+    {% endfor %}
   </div>
 
 </main>
