--- a/src/static/scss/components/_document-form.scss
+++ b/src/static/scss/components/_document-form.scss
@@ -1,5 +1,7 @@
 .document-form {
-  padding: 0 5rem;
+  width: 40rem;
+  margin: 0 auto;
+  padding: 5rem;
 
   & > .app-button {
     margin-top: 2rem;
