--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -28,7 +28,7 @@ body.-white .nav-bar {
   padding-right: 1.6rem;
   padding-left: 1.6rem;
 
-  transition: all .25s ease;
+  transition: all .25s $swift-out;
 
   background-color: $color-whitesmoke;
 
@@ -40,6 +40,13 @@ body.-white .nav-bar {
   }
   @include bp-mediumup {
     height: 3.75rem;
+  }
+
+  &.-admin {
+    justify-content: flex-start;
+
+    border-bottom: 1px solid $color-grayish;
+    background: #FFF;
   }
 
   &.-shadow {
@@ -67,6 +74,43 @@ body.-white .nav-bar {
 
     @include bp-smallonly {
       padding: 0;
+    }
+  }
+
+  & > .tools {
+    display: flex;
+    align-items: center;
+    flex: auto;
+    justify-content: center;
+
+    height: 100%;
+    margin-right: 7rem;
+
+    color: $color-gray;
+
+    & > a {
+      font-size: .875rem;
+      font-weight: bold;
+
+      display: flex;
+      align-items: center;
+
+      height: 100%;
+      padding: 0 2rem;
+
+      text-transform: uppercase;
+
+      &:hover {
+        color: $color-brand;
+      }
+
+      &.-active {
+        color: $color-brand;
+
+        &:hover {
+          color: lighten($color-brand, 5%);
+        }
+      }
     }
   }
 }
