--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -47,6 +47,10 @@ body.-white .nav-bar {
 
     border-bottom: 1px solid $color-grayish;
     background: #FFF;
+
+    & > .brand {
+      padding: 0;
+    }
   }
 
   &.-shadow {
@@ -88,6 +92,10 @@ body.-white .nav-bar {
 
     color: $color-gray;
 
+    & > * + * {
+      margin-left: 3rem;
+    }
+
     & > a {
       font-size: .875rem;
       font-weight: bold;
@@ -96,7 +104,6 @@ body.-white .nav-bar {
       align-items: center;
 
       height: 100%;
-      padding: 0 2rem;
 
       text-transform: uppercase;
 
