--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -4,23 +4,32 @@
   {{ object.title }}
 {% endblock title %}
 
+{% block body_classes %}-white{% endblock %}
+
 {% block content %}
 
 <aside class="side-bar">
-  
+
 </aside>
 <main class="document-editor">
-  {% for excerpt in object.excerpts.all %}
-  {% if excerpt.excerpt_type.align_center %}
-  <h3>{% excerpt_numbering excerpt %}</h3>
-  <h3>{{ excerpt.content|safe }}</h3>
-  {% else %}
-  <p class="js-excerptWrapper">
-    <b>{% excerpt_numbering excerpt %}</b>
-    {% include "components/document-excerpt.html" with excerpt=excerpt %}
-  </p>
-  {% endif %}
-  {% endfor %}
+  <article>
+    <header>
+      <h1>{{ object.title }}</h1>
+      <p class="description">{{ object.description }}</p>
+      <hr>
+    </header>
+    {% for excerpt in object.excerpts.all %}
+    {% if excerpt.excerpt_type.align_center %}
+    <h3>{% excerpt_numbering excerpt %}</h3>
+    <h3>{{ excerpt.content|safe }}</h3>
+    {% else %}
+    <p class="js-excerptWrapper">
+      <b>{% excerpt_numbering excerpt %}</b>
+      {% include "components/document-excerpt.html" with excerpt=excerpt %}
+    </p>
+    {% endif %}
+    {% endfor %}
+  </article>
 </main>
 
 {% endblock content %}
