--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -1,6 +1,8 @@
 {% extends "structure/base.html" %}
 {% load staticfiles projects_tags %}
 
+{% block body_classes %}-home{% endblock %}
+
 {% block content %}
 
 <header class="start-header">
