--- a/src/templates/components/nav-bar.html
+++ b/src/templates/components/nav-bar.html
@@ -1,7 +1,7 @@
-<div class="nav-bar {% if 'dashboard' in request.path %} -admin{% endif %}">
+<div class="nav-bar {% if is_owner %} -admin{% endif %}">
   <div class="nav-burger"></div>
   <a href="{% url 'home' %}" class="brand">Wikilegis</a>
-  {% if 'dashboard' in request.path %}
+  {% if is_owner %}
   <div class="tools">
     <a href="#" class="-active">Meus documentos</a>
     <a href="#">Meus grupos</a>
