--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -37,7 +37,7 @@
     {% block extracss %}
     {% endblock extracss %}
   </head>
-  <body class="js-body{% if request.path|startswith:"/p/" and request.path != "/p/new/" %} -white{% elif request.path == "/" %} -home{% endif %}">
+  <body class="js-body {% block body_classes %}{% endblock %}">
     {% include "components/nav-bar.html" %}
     {% include "components/nav-menu.html" %}
     {% include "components/alert-message.html" %}
