Create side bar

--- a/src/static/scss/ambience/_colors.scss
+++ b/src/static/scss/ambience/_colors.scss
@@ -8,6 +8,7 @@ $color-gray: #949494;
 $color-red: #EB6767;
 $color-highlight: #FD6;
 $color-highlight-on-white: #FFEEB2;
+$color-whisper: #F5F6FA;
 
 
 // Social colors
