--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -51,6 +51,7 @@
 @import 'components/howto-button';
 @import 'components/document-editor';
 @import 'components/side-bar';
+@import 'components/tool-bar';
 
 // Vendor
 @import 'vendor/tooltip';
