--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -1,17 +1,23 @@
+.document-editor.-active {
+  & > .side-bar {
+    transform: translateX(0);
+
+    & > .toggle::before {
+      transform: rotate(180deg);
+    }
+  }
+
+  & > article {
+    transform: translateX(8.5rem);
+  }
+}
+
 .document-editor {
   position: relative;
 
   display: flex;
 
-  padding-top: 2rem;
-  padding-bottom: 5rem;
-
-  @include bp-smallonly {
-    padding: 4rem 1rem;
-  }
-  @include bp-mediumonly {
-    padding: 4rem 1.6rem;
-  }
+  padding: 0;
 
   &::before {
     position: fixed;
@@ -25,10 +31,6 @@
     pointer-events: none;
 
     background: linear-gradient(transparent, #FFF);
-
-    @include bp-smallonly {
-      top: calc(100% - 4rem);
-    }
   }
 
   & > h3 {
@@ -36,29 +38,34 @@
   }
 
   & > article {
+    font-size: 1rem;
+
     max-width: 66ch;
     margin: 0 auto;
-  }
+    padding: 2rem 1.6rem 5rem 1.6rem;
 
-  & > article > p {
-    position: relative;
-  }
+    transition: all .25s $swift-out;
 
-  & > article > header {
-    position: relative;
+    & > p {
+      position: relative;
+    }
 
-    display: flex;
-    flex-direction: column;
-  }
+    & > header {
+      position: relative;
 
-  & > article > header > hr {
-    margin-bottom: 0;
-  }
+      display: flex;
+      flex-direction: column;
+    }
 
-  & > article > header > .description {
-    font-size: 1.25rem;
-    font-weight: 300;
+    & > header > hr {
+      margin-bottom: 0;
+    }
 
-    margin-top: 1rem;
+    & > header > .description {
+      font-size: 1.25rem;
+      font-weight: 300;
+
+      margin-top: 1rem;
+    }
   }
 }
