--- a/src/templates/components/hero.html
+++ b/src/templates/components/hero.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <div class="hero">
   <img src="{% static 'img/wikilegis-horizontal.svg' %}" alt="Wikilegis">
-  <h1>Dê sua <span class="text-highlight">opinião</span></h1>
-  <p>Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos.</p>
+  <h1>Dê <span class="text-highlight">sua opinião</span> em projetos de lei</h1>
+  <p>Analise os projetos de lei, contribua dando sua opinião em trechos do texto e avalie as opiniões de outros cidadãos.</p>
   <a class="app-button -green js-howtoButton">Como participar?</a>
 </div>
