--- a/src/static/scss/components/_projects-list.scss
+++ b/src/static/scss/components/_projects-list.scss
@@ -3,8 +3,13 @@
   padding: 2rem 1rem;
 
   @include bp-smallup {
-    padding: 4rem 8vw;
+    padding: 4rem 4vw;
+    width: calc(100% - 16vw);
+    box-shadow: 0px 0px 110px 0px rgba(0, 0, 0, 0.15), 0px -3px 45px 0px rgba(0, 0, 0, 0.05);
+    background-color: rgba($color-whitesmoke, 0.85);
   }
+
+
 
   & > .header {
     display: flex;
