--- a/src/static/scss/components/_start-header.scss
+++ b/src/static/scss/components/_start-header.scss
@@ -4,11 +4,14 @@
   justify-content: space-between;
 
   box-sizing: border-box;
-  min-height: 100vh;
   padding: 4rem 2rem;
 
   @include bp-smallup {
     padding: 4rem 8vw;
+  }
+
+  @include bp-mediumup {
+    height: calc(100vh - 9.5rem);
   }
 
   & > .hero {
@@ -21,9 +24,21 @@
       width: calc(40% - 2rem);
     }
 
-    & > h1 > .text-highlight {
-      @extend h1;
+    & > img {
+      max-width: 75vw;
+      height: 5rem;
+    }
 
+    & > h1 {
+      font-size: $font-size-base;
+
+      @include bp-smallup {
+        font-size: $font-size-hecto;
+      }
+    }
+
+    & > h1 > .text-highlight {
+      font-weight: 700;
       padding: .25rem .5rem;
     }
 
@@ -49,13 +64,20 @@
     display: none;
 
     @include bp-mediumup {
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
       width: calc(60% - 2rem);
+      height: 120%;
     }
 
     & > img {
       width: 100%;
+      height: 100%;
+      max-height: 34rem;
+
+      object-fit: contain;
     }
   }
 
