--- a/src/static/scss/ambience/_animation.scss
+++ b/src/static/scss/ambience/_animation.scss
@@ -145,3 +145,44 @@ $swift-out: cubic-bezier(.55, 0, .1, 1);
   }
 }
 
+@keyframes zoom-in-reveal {
+  0% {
+    transform: scale(0);
+  }
+
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes zoom-out-reveal {
+  0% {
+    opacity: 0;
+    transform: scale(2);
+  }
+
+
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes fade-to-left {
+  0% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  90% {
+    opacity: 0;
+  }
+
+
+  100% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+}
+
