--- a/src/static/scss/components/_side-bar.scss
+++ b/src/static/scss/components/_side-bar.scss
@@ -46,6 +46,7 @@
       padding: 1rem 1.6rem;
 
       cursor: pointer;
+      user-select: none;
       transition: all .25s ease;
 
       border-bottom: $border;
