--- a/src/templates/components/side-bar.html
+++ b/src/templates/components/side-bar.html
@@ -4,28 +4,28 @@
     <div class="filter"></div>
   </div>
   <div class="suggestions">
-    <div class="suggestion">
+    <div class="suggestion js-suggestionCluster">
       <div class="count">
         <span class="value">13</span>
         <span>Opiniões</span>
       </div>
       <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
     </div>
-    <div class="suggestion">
+    <div class="suggestion js-suggestionCluster">
       <div class="count">
         <span class="value">13</span>
         <span>Opiniões</span>
       </div>
       <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
     </div>
-    <div class="suggestion">
+    <div class="suggestion js-suggestionCluster">
       <div class="count">
         <span class="value">13</span>
         <span>Opiniões</span>
       </div>
       <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
     </div>
-    <div class="suggestion">
+    <div class="suggestion js-suggestionCluster">
       <div class="count">
         <span class="value">13</span>
         <span>Opiniões</span>
@@ -33,5 +33,5 @@
       <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
     </div>
   </div>
-  <div class="toggle"></div>
+  <div class="toggle js-toggleButton"></div>
 </aside>
