--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-<main class="document-editor">
+<main class="document-editor -active js-documentEditor">
   {% include "components/side-bar.html" %}
   <article>
     <header>
@@ -21,8 +21,8 @@
     <h3>{% excerpt_numbering excerpt %}</h3>
     <h3>{{ excerpt.content|safe }}</h3>
     {% else %}
-    <p class="js-excerptWrapper">
-      <b>{% excerpt_numbering excerpt %}</b>
+    <p class="js-excerptWrapper" contenteditable="true">
+      <b contenteditable="false">{% excerpt_numbering excerpt %}</b>
       {% include "components/document-excerpt.html" with excerpt=excerpt %}
     </p>
     {% endif %}
@@ -34,4 +34,6 @@
 {% endblock content %}
 
 {% block page_js %}
+<script src="{% static 'js/components/DocumentSideBar/view.js' %}"></script>
+<script src="{% static 'js/pages/editDocument.js' %}"></script>
 {% endblock page_js %}
