--- a/src/templates/components/side-bar.html
+++ b/src/templates/components/side-bar.html
@@ -32,6 +32,83 @@
       </div>
       <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
     </div>
+    <div class="suggestion js-suggestionCluster">
+      <div class="count">
+        <span class="value">13</span>
+        <span>Opiniões</span>
+      </div>
+      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
+    </div>
+    <div class="suggestion js-suggestionCluster">
+      <div class="count">
+        <span class="value">13</span>
+        <span>Opiniões</span>
+      </div>
+      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
+    </div>
+    <div class="suggestion js-suggestionCluster">
+      <div class="count">
+        <span class="value">13</span>
+        <span>Opiniões</span>
+      </div>
+      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
+    </div>
+    <div class="suggestion js-suggestionCluster">
+      <div class="count">
+        <span class="value">13</span>
+        <span>Opiniões</span>
+      </div>
+      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
+    </div>
+    <div class="suggestion js-suggestionCluster">
+      <div class="count">
+        <span class="value">13</span>
+        <span>Opiniões</span>
+      </div>
+      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
+    </div>
+    <div class="suggestion js-suggestionCluster">
+      <div class="count">
+        <span class="value">13</span>
+        <span>Opiniões</span>
+      </div>
+      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
+    </div>
+    <div class="suggestion js-suggestionCluster">
+      <div class="count">
+        <span class="value">13</span>
+        <span>Opiniões</span>
+      </div>
+      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
+    </div>
+    <div class="suggestion js-suggestionCluster">
+      <div class="count">
+        <span class="value">13</span>
+        <span>Opiniões</span>
+      </div>
+      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
+    </div>
+    <div class="suggestion js-suggestionCluster">
+      <div class="count">
+        <span class="value">13</span>
+        <span>Opiniões</span>
+      </div>
+      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
+    </div>
+    <div class="suggestion js-suggestionCluster">
+      <div class="count">
+        <span class="value">13</span>
+        <span>Opiniões</span>
+      </div>
+      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
+    </div>
+    <div class="suggestion js-suggestionCluster">
+      <div class="count">
+        <span class="value">13</span>
+        <span>Opiniões</span>
+      </div>
+      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
+    </div>
   </div>
   <div class="toggle js-toggleButton"></div>
 </aside>
